syntax = "proto3";

import "google/protobuf/timestamp.proto";
package comment;
option go_package = "./proto";

service comment {
    rpc GetCommentListById(VideoIdRequest) returns (CommentListResponse);
    rpc CommentAction(ActionRequest) returns (ActionResponse);
}
message VideoIdRequest{
  int64 id = 1 ;
}
message ActionResponse{
  int64 commentId = 1;
}
message ActionRequest{
  int64 userId = 1;
  int64 videoID = 2;
  string commentText = 3;
  int32 actionType = 4;
  int64 commentId = 5;
}

message CommentListResponse{
  repeated CommentInfoResponse data = 1;
}

message CommentInfoResponse {
  int64 id = 1;
  int64 userId = 2;
  string content = 3;
  google.protobuf.Timestamp createDate = 4;
}